fix: SpotService 수정에 따른 SpotServiceTest 수정